--- a/scss/main.css
+++ b/scss/main.css
@@ -958,10 +958,11 @@ a:focus {
   font-size: 9rem;
 }
 
-.restaurants-image-parent {
-  padding: 3rem;
-  padding-left: 6rem;
-  padding-right: 6rem;
+.restaurants {
+  color: transparent;
+  font-size: 3rem;
+  width: 80%;
+  height: 30%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -969,21 +970,87 @@ a:focus {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-line-pack: justify;
+      align-content: space-between;
+  padding-top: 4rem;
+  padding-bottom: 2rem;
 }
 
-.restaurant-image {
-  width: 30%;
-  height: auto;
-  padding-left: 5rem;
-  padding-right: 5rem;
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+.katz {
+  background-image: url("/img/katz-deli-restaurants.jpg");
+  -webkit-filter: grayscale(25%);
+          filter: grayscale(25%);
+  background-position: center;
+  background-size: cover;
+  height: 15rem;
+  width: 25%;
+  margin-left: 4rem;
+  margin-right: 4rem;
+  position: relative;
+  border-radius: 0.3rem;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+.katz:hover {
+  background-image: url("/img/katz-deli-inside.jpg");
+  background-size: cover;
+  -webkit-filter: grayscale(0%);
+          filter: grayscale(0%);
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  border-radius: 1rem;
+}
+
+.average {
+  background-image: url("/img/katz-deli-restaurants.jpg");
+  -webkit-filter: grayscale(25%);
+          filter: grayscale(25%);
+  background-position: center;
+  background-size: cover;
+  height: 15rem;
+  width: 25%;
+  margin-left: 4rem;
+  margin-right: 4rem;
+  position: relative;
+  border-radius: 0.3rem;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+.average:hover {
+  -webkit-filter: grayscale(0%);
+          filter: grayscale(0%);
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  border-radius: 1rem;
+}
+
+.expensive {
+  background-image: url("/img/katz-deli-restaurants.jpg");
+  -webkit-filter: grayscale(25%);
+          filter: grayscale(25%);
+  background-position: center;
+  background-size: cover;
+  height: 15rem;
+  width: 25%;
+  margin-left: 4rem;
+  margin-right: 4rem;
+  position: relative;
+  border-radius: 0.3rem;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+.expensive:hover {
+  -webkit-filter: grayscale(0%);
+          filter: grayscale(0%);
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  border-radius: 1rem;
 }
 
 .restaurants-text p {
