--- a/scss/_restaurants.scss
+++ b/scss/_restaurants.scss
@@ -34,9 +34,8 @@
   filter: grayscale(25%);
   background-position: center;
   background-size: cover;
-  //-webkit-text-stroke: 0.1rem $primary-color-dark;
-  height: 15rem;
-  width: 25%;
+  height: 20rem;
+  width: 30%;
   margin-left: 4rem;
   margin-right: 4rem;
   position: relative;
@@ -50,40 +49,42 @@
   transform: scale(1.1);
   border-radius: 1rem;
 }
-.average {
-  background-image: url("/img/katz-deli-restaurants.jpg");
+.sugar {
+  background-image: url("/img/sugar-factory-restaurants.jpg");
   filter: grayscale(25%);
   background-position: center;
   background-size: cover;
-  //-webkit-text-stroke: 0.1rem $accent-color-mix;
-  height: 15rem;
-  width: 25%;
+  height: 20rem;
+  width: 30%;
   margin-left: 4rem;
   margin-right: 4rem;
   position: relative;
   border-radius: 0.3rem;
   transition: all 0.4s ease;
 }
-.average:hover {
+.sugar:hover {
+  background-image: url("/img/sugar-factory-inside.jpg");
+  background-size: cover;
   filter: grayscale(0%);
   transform: scale(1.1);
   border-radius: 1rem;
 }
-.expensive {
-  background-image: url("/img/katz-deli-restaurants.jpg");
-  filter: grayscale(25%);
+.russiantearoom {
+  background-image: url("/img/russian-tea-room-restaurants.jpg");
+  filter: grayscale(75%);
   background-position: center;
   background-size: cover;
-  //-webkit-text-stroke: 0.1rem $accent-color-mix;
-  height: 15rem;
-  width: 25%;
+  height: 20rem;
+  width: 30%;
   margin-left: 4rem;
   margin-right: 4rem;
   position: relative;
   border-radius: 0.3rem;
   transition: all 0.4s ease;
 }
-.expensive:hover {
+.russiantearoom:hover {
+  background-image: url("/img/russian-tea-room-inside.jpg");
+  background-size: cover;
   filter: grayscale(0%);
   transform: scale(1.1);
   border-radius: 1rem;
