--- a/scss/main.css
+++ b/scss/main.css
@@ -985,8 +985,8 @@ a:focus {
           filter: grayscale(25%);
   background-position: center;
   background-size: cover;
-  height: 15rem;
-  width: 25%;
+  height: 20rem;
+  width: 30%;
   margin-left: 4rem;
   margin-right: 4rem;
   position: relative;
@@ -1005,14 +1005,14 @@ a:focus {
   border-radius: 1rem;
 }
 
-.average {
-  background-image: url("/img/katz-deli-restaurants.jpg");
+.sugar {
+  background-image: url("/img/sugar-factory-restaurants.jpg");
   -webkit-filter: grayscale(25%);
           filter: grayscale(25%);
   background-position: center;
   background-size: cover;
-  height: 15rem;
-  width: 25%;
+  height: 20rem;
+  width: 30%;
   margin-left: 4rem;
   margin-right: 4rem;
   position: relative;
@@ -1021,7 +1021,9 @@ a:focus {
   transition: all 0.4s ease;
 }
 
-.average:hover {
+.sugar:hover {
+  background-image: url("/img/sugar-factory-inside.jpg");
+  background-size: cover;
   -webkit-filter: grayscale(0%);
           filter: grayscale(0%);
   -webkit-transform: scale(1.1);
@@ -1029,14 +1031,14 @@ a:focus {
   border-radius: 1rem;
 }
 
-.expensive {
-  background-image: url("/img/katz-deli-restaurants.jpg");
-  -webkit-filter: grayscale(25%);
-          filter: grayscale(25%);
+.russiantearoom {
+  background-image: url("/img/russian-tea-room-restaurants.jpg");
+  -webkit-filter: grayscale(75%);
+          filter: grayscale(75%);
   background-position: center;
   background-size: cover;
-  height: 15rem;
-  width: 25%;
+  height: 20rem;
+  width: 30%;
   margin-left: 4rem;
   margin-right: 4rem;
   position: relative;
@@ -1045,7 +1047,9 @@ a:focus {
   transition: all 0.4s ease;
 }
 
-.expensive:hover {
+.russiantearoom:hover {
+  background-image: url("/img/russian-tea-room-inside.jpg");
+  background-size: cover;
   -webkit-filter: grayscale(0%);
           filter: grayscale(0%);
   -webkit-transform: scale(1.1);
