--- a/scss/main.css
+++ b/scss/main.css
@@ -295,6 +295,10 @@ a:focus {
   .empire img {
     display: none;
   }
+  .left-side {
+    padding-left: 0rem;
+    height: 6rem;
+  }
 }
 
 /*@mixin media-query-mobile {
@@ -372,24 +376,19 @@ a:focus {
   -webkit-text-stroke-color: black;
 }
 
-@media screen and (min-width: 1180px) and (max-width: 1300px) {
+@media screen and (max-width: 1300px) {
   .video-text {
-    top: 35%;
+    top: 45%;
   }
 }
 
-@media screen and (max-width: 1179px) {
+@media screen and (max-width: 480px) {
   .video-text {
     font-size: 8rem;
+    top: 35%;
   }
   .video-and-text {
-    margin-top: 14rem;
-  }
-}
-
-@media screen and (max-width: 1179px) {
-  .video-and-text {
-    margin-top: 14rem;
+    margin-top: 10rem;
   }
 }
 
@@ -431,7 +430,7 @@ a:focus {
   border-top: 0.1rem #00ffdd solid;
   width: 100%;
   height: auto;
-  padding-bottom: 8rem;
+  padding-bottom: 0rem;
   padding-top: 9rem;
 }
 
@@ -617,8 +616,16 @@ a:focus {
 }
 
 @media screen and (max-width: 480px) {
+  .culture-container {
+    padding-bottom: 0rem;
+    padding-top: 2rem;
+    padding-left: 0rem;
+  }
   .culture-label {
     font-size: 7rem;
+  }
+  .culture-image-parent {
+    width: 95%;
   }
   .culture-text p {
     font-size: 1.4rem;
@@ -661,10 +668,9 @@ a:focus {
   -ms-flex-pack: distribute;
       justify-content: space-around;
   color: #fff;
-  border-top: 0.1rem #00ffdd solid;
   width: 100%;
   height: auto;
-  padding-bottom: 8rem;
+  padding-bottom: 0rem;
   padding-top: 9rem;
 }
 
@@ -858,6 +864,8 @@ a:focus {
         -ms-flex-pack: justify;
             justify-content: space-between;
     padding-right: 0rem;
+    padding-bottom: 0rem;
+    padding-top: 0rem;
   }
   .attractions-label {
     padding-top: 2rem;
@@ -876,7 +884,7 @@ a:focus {
     width: 100%;
     padding-left: 1rem;
     padding-right: 1rem;
-    padding-bottom: 5rem;
+    padding-bottom: 0rem;
   }
   .attractions-text p {
     padding-right: 2rem;
@@ -948,10 +956,9 @@ a:focus {
           justify-content: center;
   background-color: #000000;
   color: #fff;
-  border-top: 0.1rem #00ffdd solid;
   height: auto;
   padding-bottom: 8rem;
-  padding-top: 9rem;
+  padding-top: 10rem;
 }
 
 .restaurants-label {
@@ -995,6 +1002,19 @@ a:focus {
   transition: all 0.4s ease;
 }
 
+.katz a {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  text-decoration: none;
+  z-index: 10;
+  background-color: #fff;
+  opacity: 0;
+  filter: alpha(opacity=1);
+}
+
 .katz:hover {
   background-image: url("/img/katz-deli-inside.jpg");
   background-size: cover;
@@ -1019,6 +1039,19 @@ a:focus {
   border-radius: 0.3rem;
   -webkit-transition: all 0.4s ease;
   transition: all 0.4s ease;
+}
+
+.sugar a {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  text-decoration: none;
+  z-index: 10;
+  background-color: #fff;
+  opacity: 0;
+  filter: alpha(opacity=1);
 }
 
 .sugar:hover {
@@ -1047,6 +1080,19 @@ a:focus {
   transition: all 0.4s ease;
 }
 
+.russiantearoom a {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  text-decoration: none;
+  z-index: 10;
+  background-color: #fff;
+  opacity: 0;
+  filter: alpha(opacity=1);
+}
+
 .russiantearoom:hover {
   background-image: url("/img/russian-tea-room-inside.jpg");
   background-size: cover;
@@ -1067,6 +1113,69 @@ a:focus {
   padding-right: 6rem;
   padding-top: 3rem;
   padding-bottom: 3rem;
+}
+
+/* MEDIA QUERY CHANGES */
+@media screen and (min-width: small-window-max) and (max-width: desktop-max) {
+  .restaurants-text p {
+    font-size: 1.8rem;
+  }
+}
+
+@media screen and (min-width: 481px) and (max-width: 1150px) {
+  .restaurants-text p {
+    font-size: 1.8rem;
+  }
+  .katz {
+    margin-right: 2rem;
+    margin-left: 2rem;
+  }
+  .sugar {
+    margin-right: 2rem;
+    margin-left: 2rem;
+  }
+  .russiantearoom {
+    margin-right: 2rem;
+    margin-left: 2rem;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .restaurants-container {
+    padding-top: 2rem;
+  }
+  .restaurants-label {
+    font-size: 7rem;
+  }
+  .restaurants-text p {
+    font-size: 1.4rem;
+    padding-right: 3rem;
+    padding-left: 3rem;
+    text-align: left;
+  }
+  .restaurants {
+    padding-bottom: 0.5rem;
+    padding-top: 1.5rem;
+    width: 90%;
+  }
+  .katz {
+    margin-right: 1rem;
+    margin-left: 1rem;
+    width: 50%;
+    height: 15rem;
+  }
+  .sugar {
+    margin-right: 1rem;
+    margin-left: 1rem;
+    width: 50%;
+    height: 15rem;
+  }
+  .russiantearoom {
+    margin-right: 1rem;
+    margin-left: 1rem;
+    width: 50%;
+    height: 15rem;
+  }
 }
 
 html,
