--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -96,6 +96,9 @@ a:focus {
   color: $accent-color-mix;
   font-weight: bold;
 }
+a:active {
+  transform: translateY(0.7rem);
+}
 
 .newyorkcity::after {
   content: " ";
