--- a/scss/main.css
+++ b/scss/main.css
@@ -734,6 +734,19 @@ a:active {
   transition: all 0.2s ease;
 }
 
+.empirestate a {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  text-decoration: none;
+  z-index: 10;
+  background-color: #fff;
+  opacity: 0;
+  filter: alpha(opacity=1);
+}
+
 .empirestate:hover {
   height: 100rem;
 }
@@ -742,6 +755,19 @@ a:active {
   background-image: url("../img/liberty-attractions.jpg");
   -webkit-transition: all 0.2s ease;
   transition: all 0.2s ease;
+}
+
+.liberty a {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  text-decoration: none;
+  z-index: 10;
+  background-color: #fff;
+  opacity: 0;
+  filter: alpha(opacity=1);
 }
 
 .liberty:hover {
@@ -754,6 +780,19 @@ a:active {
   transition: all 0.2s ease;
 }
 
+.times a {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  text-decoration: none;
+  z-index: 10;
+  background-color: #fff;
+  opacity: 0;
+  filter: alpha(opacity=1);
+}
+
 .times:hover {
   height: 100rem;
 }
@@ -762,6 +801,19 @@ a:active {
   background-image: url("../img/radiocity-attractions.jpg");
   -webkit-transition: all 0.2s ease;
   transition: all 0.2s ease;
+}
+
+.radiocity a {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  text-decoration: none;
+  z-index: 10;
+  background-color: #fff;
+  opacity: 0;
+  filter: alpha(opacity=1);
 }
 
 .radiocity:hover {
